finished whole project

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-BLOG_APP_APPWRITE_URL=https://cloud.appwrite.io/v1
-BLOG_APP_APPRITE_ID=677fa68f002775aa29b0
-BLOG_APP_APPWRITE_DATABASE_ID=677fa8070035356eeeb3
-BLOG_APP_APPWRITE_COLLECTION_ID=677fa823003be08887b5
-BLOG_APP_APPWRITE_BUCKET_ID=677fa98e0025febcc819
+VITE_APPWRITE_URL=https://cloud.appwrite.io/v1
+VITE_APPWRITE_ID=677fa68f002775aa29b0
+VITE_APPWRITE_DATABASE_ID=677fa8070035356eeeb3
+VITE_APPWRITE_COLLECTION_ID=677fa823003be08887b5
+VITE_APPWRITE_BUCKET_ID=677fa98e0025febcc819
